# secureorder

./: .gitignore  BUILD_INSTRUCTIONS.md  DEPLOYMENT.md  Dockerfile  README.md  build.sh  go.mod  go.sum  hardhat.config.ts  package-lock.json  package.json
build_wrapper/include/privacy/: encryption.h
cmd/client/: main.go
cmd/demo/: main.go
cmd/live-demo/: main.go
cmd/rpc-loadtest/: main.go
cmd/sequencer/: main.go
contracts/: MockDEXEngine.sol  OrderVerifier.sol
cpp/: CMakeLists.txt
cpp/include/privacy/: batch_decryptor.h  encrypted_mempool.hpp  encryption.h  thread_pool.h
cpp/src/privacy/: batch_decryptor.cpp  encrypted_mempool.cpp  encryption.cpp  keygen.cpp  thread_pool.cpp
cpp/tests/: bench_decryption.cpp  test_encryption.cpp
docs/: DEPLOYMENT.md
internal/rpc/: integration_test.go  load_test.go  server.go  server_test.go
internal/settlement/: evm_publisher.go  evm_publisher_stub.go  factory.go  publisher.go
k8s/: hpa.yaml  service.yaml  statefulset.yaml
pkg/privacy/: encryption.cpp  encryption_wrapper.cpp  privacy_cgo.go  privacy_stub.go  wrapper.cpp
pkg/sequencing/: commitment.go  encrypted_mempool.go  encrypted_mempool_test.go  log.go  queue.go  queue_test.go  raft_log.go  raft_log_test.go  reception_store.go
proto/: rpc.pb.go  rpc.proto  rpc_grpc.pb.go
scripts/: build-local.sh  check-commitment.ts  deploy-local-order-verifier.sh  deploy-order-verifier.ts  dex_simulation.py  find-leader.sh  load-local-raft.sh  measure_efficiency.py  rpc_pb2.py  rpc_pb2_grpc.py  run-5-node-raft.sh  run-local-evm.sh  run-local-raft-with-evm.sh  run-local-raft.sh  stop-5-node-raft.sh  stop-local-evm.sh  stop-local-raft.sh  test_atomic_settlement.py
test/: MockDEXEngine.t.sol
